# ComfyUI_TensorRT

./: LICENSE  README.md  __init__.py  onnx_nodes.py  pyproject.toml  requirements.txt  tensorrt_convert.py  tensorrt_diffusion_model.py  tensorrt_error_recorder.py  tensorrt_loader.py  tensorrt_nodes.py
.github/workflows/: publish.yml
models/: __init__.py  auraflow.py  baseline.py  flux.py  sd3.py  sd_unet.py  supported_models.py
onnx_utils/: export.py
workflows/: Build.TRT.Engine_SD1.5_Dynamic.json  Build.TRT.Engine_SD1.5_Static.json  Build.TRT.Engine_SDXL_Base_Static.json  Build.TRT.Engine_SDXL_Turbo_Static.json  Build.TRT.Engine_SVD_Static.json  Build.TRT.Engine_SVD_XT_Static.json  Create_SD1.5_PyTorch.json  Create_SD1.5_TRT_Dynamic.json  Create_SD1.5_TRT_Static.json  Create_SD3_Pytorch.json  Create_SD3_TRT_Static.json  Create_SDXL_Base_PyTorch.json  Create_SDXL_Base_TT_Static.json  Create_SDXL_Turbo_PyTorch.json  Create_SDXL_Turbo_TRT_Static.json  Create_SVD_Pytorch.json  Create_SVD_TRT_Static.json  Create_SVD_XT_PyTorch.json  Create_SVD_XT_TRT_Static.json  Save_SD3_VAE.json
